server backend started, overflow fix in header

--- a/client/src/components/Body/body.scss
+++ b/client/src/components/Body/body.scss
@@ -3,6 +3,10 @@
   padding: 5rem 5rem;
   background-color: #d9d9d9;
 
+  @media (max-width: $mantine-breakpoint-sm) {
+    padding: 1rem 1rem;
+  }
+
   @include dark {
     background-color: rgb(34, 33, 33);
   }
@@ -20,9 +24,10 @@
     position: relative;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     margin-right: 1rem;
+    margin-top: 1rem;
 
-    &:not(:last-child) {
-      // margin-right: 1rem;
+    @media (max-width: $mantine-breakpoint-sm) {
+      margin-right: 0;
     }
   }
 }
