--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -2,6 +2,7 @@
   position: relative;
   background: rgb(20, 32, 32);
   border-radius: 0.2rem 0.2rem 0 0;
+  overflow: hidden;
 
   @include light {
     color: grey;
