--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -11,7 +11,6 @@
 
 body {
   animation: fadeIn 0.4s linear;
-
   transition: all 0.5s;
 
   @include light {
@@ -37,7 +36,7 @@ body {
   box-shadow: 0rem 2rem 2rem 1rem rgba(0, 0, 0, 0.76);
 
   @include smaller-than($mantine-breakpoint-sm) {
-    margin: 1rem;
+    margin: 0rem;
   }
 }
 
